finish design commit

--- a/app/src/main/res/layout/notebook_tutorial_1.xml
+++ b/app/src/main/res/layout/notebook_tutorial_1.xml
@@ -80,7 +80,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center"
-                android:src="@drawable/ic_oval"/>
+                app:srcCompat="@drawable/ic_oval"/>
 
             <TextView
                 android:layout_width="0dp"
