--- a/app/src/main/res/layout/home_pages.xml
+++ b/app/src/main/res/layout/home_pages.xml
@@ -121,7 +121,7 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_notebook"
+            app:srcCompat="@drawable/ic_add_notebook"
             android:scaleType="fitCenter"
             android:layout_marginTop="10dp"/>
 
@@ -130,13 +130,16 @@
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_links_notebook" />
-
+            app:srcCompat="@drawable/ic_links_notebook"
+            android:tintMode="screen"
+            android:tint="#FF3D1054"/>
+        android:tintMode="screen"
+        android:tint="#FF3D1054"
         <ImageView
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_class_notebook" />
+            app:srcCompat="@drawable/ic_class_notebook" />
 
     </LinearLayout>
 
