--- a/app/src/main/res/layout/notebook_tutorial_2.xml
+++ b/app/src/main/res/layout/notebook_tutorial_2.xml
@@ -20,7 +20,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_tutorial"
+            app:srcCompat="@drawable/ic_tutorial"
             android:scaleType="center"/>
         <ImageView
             android:layout_width="match_parent"
@@ -90,7 +90,7 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center"
-                android:src="@drawable/ic_oval7"/>
+                app:srcCompat="@drawable/ic_oval7"/>
 
             <TextView
                 android:layout_width="0dp"
