--- a/app/src/main/res/layout/empty_note.xml
+++ b/app/src/main/res/layout/empty_note.xml
@@ -73,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search"
         android:layout_marginTop="88dp"
-        app:srcCompat="@drawable/ic_rectangle3"/>
+        android:src="@drawable/ic_rectangle3"/>
 
     <TextView
         android:layout_width="wrap_content"
