--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -21,7 +21,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_tutorial"
+            android:src="@drawable/ic_tutorial"
             android:scaleType="center"/>
         <ImageView
             android:layout_width="match_parent"
