--- a/app/src/main/res/layout/activity_singup.xml
+++ b/app/src/main/res/layout/activity_singup.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".singupActivity">
+
     <LinearLayout android:layout_marginHorizontal="15dp"
         android:layout_marginTop="45dp"
         android:layout_width="match_parent"
@@ -15,7 +16,6 @@
         android:orientation="horizontal">
         <TextView
             android:paddingHorizontal="11dp"
-
             android:paddingVertical="18dp"
             android:paddingStart="23dp"
             android:layout_weight="7"
@@ -50,33 +50,29 @@
 
         android:layout_marginHorizontal="30dp"
         android:textColorHint="@color/emai_pass_hint"
-
         android:layout_marginTop="19dp"
         app:backgroundTint="@color/black"
-        android:paddingStart="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email"
-
         />
     <EditText
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="19dp"
         app:backgroundTint="@color/black"
-
-        android:paddingStart="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
         android:textColorHint="@color/emai_pass_hint"
         />
+
     <View
         android:layout_marginTop="15dp"
-
         android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></View>
+        android:layout_weight="1"/>
+
     <TextView
         android:layout_marginTop="16dp"
         android:layout_gravity="center"
