--- a/app/src/main/res/layout/activity_confirmation_message.xml
+++ b/app/src/main/res/layout/activity_confirmation_message.xml
@@ -81,7 +81,7 @@ android:layout_marginTop="31dp"
             android:layout_marginRight="20dp"
             android:lineSpacingExtra="20dp"
             android:text="@string/reset_email"
-
+            android:gravity="center"
             android:textColor="@color/black"
 
             android:textSize="16dp"
