--- a/app/src/main/res/layout/activity_edit1.xml
+++ b/app/src/main/res/layout/activity_edit1.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Edit1Activity"
-    android:background="@color/plure"
+    android:background="@color/purple"
     android:orientation="vertical"
     >
     <LinearLayout
@@ -15,7 +14,6 @@
         android:layout_marginTop="45dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:orientation="horizontal">
         <ImageView
 
@@ -32,16 +30,15 @@
             android:layout_height="match_parent"
             android:layout_weight="1"></View>
 
+
         <ImageView
-
-            android:paddingHorizontal="11dp"
-
-            android:paddingVertical="18dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            app:srcCompat="@drawable/pickershap"/>
 
-            android:src="@drawable/ic_picker"/>
+
+
     </LinearLayout>
     <LinearLayout
         android:layout_marginVertical="16dp"
@@ -54,15 +51,12 @@
             android:backgroundTint="@color/white"
 
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:textSize="13dp"
-            android:layout_marginStart="10dp"
-            android:text="@string/date"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
+            android:buttonTint="@color/white"
+            android:paddingStart="8dp"
+            android:text="@string/date"
             />
+
 
     </LinearLayout>
 
@@ -96,5 +90,6 @@
 
 
     </LinearLayout>
+
 
 </LinearLayout>
