--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -16,26 +16,25 @@
         android:orientation="horizontal">
 
         <ImageView
-
+            android:layout_marginStart="12dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-                    android:paddingHorizontal="11dp"
-
+            android:paddingHorizontal="11dp"
             android:paddingVertical="18dp"
-
-            android:src="@drawable/back_re"/>
+            android:src="@drawable/back_re" />
     </LinearLayout>
+
        <TextView
-           android:paddingHorizontal="18dp"
+        android:paddingHorizontal="18dp"
         android:textStyle="bold"
         android:paddingTop="5dp"
-        android:layout_marginHorizontal="30dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="21dp"
         android:textSize="31dp"
         android:text="@string/forget1"
         android:layout_width="match_parent"
         android:textColor="#1A1824"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"/>
 
     <TextView
 
@@ -51,10 +50,8 @@
 
         android:layout_marginHorizontal="30dp"
         android:textColorHint="@color/emai_pass_hint"
-
         android:layout_marginTop="19dp"
         app:backgroundTint="@color/black"
-        android:paddingStart="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email"
