--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,10 +51,8 @@ android:orientation="vertical"
 
         android:layout_marginHorizontal="30dp"
         android:textColorHint="@color/emai_pass_hint"
-
         android:layout_marginTop="19dp"
         app:backgroundTint="@color/black"
-        android:paddingStart="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/email"
@@ -64,20 +62,18 @@ android:orientation="vertical"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="19dp"
         app:backgroundTint="@color/black"
-
-        android:paddingStart="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/password"
 android:textColorHint="@color/emai_pass_hint"
         />
+
     <View
         android:layout_marginTop="15dp"
-
         android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></View>
+        android:layout_weight="1"/>
     <TextView
         android:layout_marginTop="16dp"
         android:layout_gravity="center"
