--- a/app/src/main/res/layout/activity_note_edit.xml
+++ b/app/src/main/res/layout/activity_note_edit.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -10,40 +9,15 @@
     android:background="@color/white"
     android:orientation="vertical"
     >
-    <LinearLayout
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="45dp"
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:id="@+id/header1"
+        android:layout_margin="16dp"
+        android:layout_width="wrap_content"
+        android:scaleType="fitStart"
         android:layout_height="wrap_content"
+        app:srcCompat="@drawable/navbox" />
 
-        android:orientation="horizontal">
-        <Button
-
-            android:paddingHorizontal="11dp"
-android:background="@color/plure"
-            android:paddingVertical="18dp"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_gravity="center_vertical"
-
-            />
-        <View
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"></View>
-
-        <TextView
-
-            android:paddingHorizontal="11dp"
-            android:text="Done"
-            android:textColor="@color/plure"
-            android:paddingVertical="18dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-
-            />
-    </LinearLayout>
     <LinearLayout
         android:layout_marginVertical="16dp"
         android:layout_marginHorizontal="24dp"
@@ -58,7 +32,6 @@ android:orientation="vertical"
             android:fontFamily="400"
             android:letterSpacing="0.41"
             android:textSize="34dp"
-            android:layout_marginStart="10dp"
             android:text="Notes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -66,75 +39,274 @@ android:orientation="vertical"
             />
 
         <EditText
-            android:textSize="17dp"
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/notes"
             android:drawableStart="@drawable/ic_searchicon"
-android:drawablePadding="10dp"
-android:background="@drawable/inputerch"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Search"/>
+            android:background="@drawable/ic_searchfield"
+            android:hint="Search"
+            android:drawablePadding="16dp"
+            android:padding="8dp"
+            />
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_marginHorizontal="24dp"
-        android:orientation="vertical"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/note1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <Button
-        android:layout_gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_width="8dp"
-        android:layout_height="8dp"/>
-    <TextView
-        android:layout_weight="4"
-        android:layout_gravity="center"
-android:gravity="start"
-        android:layout_marginBottom="7dp"
-        android:textSize="17dp"
-android:textFontWeight="600"
-        android:layout_marginStart="10dp"
-        android:text="@string/note_app_design"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        />
-    <TextView
-        android:layout_weight="1"
-        android:gravity="start"
-        android:layout_gravity="center"
-        android:text="18/06/12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_margin="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/header3"
+        android:backgroundTint="#f9f9f9">
 
-</LinearLayout>
-        <TextView
-            android:layout_marginBottom="7dp"
-            android:textSize="12dp"
-            android:textStyle="bold"
-            android:layout_marginStart="10dp"
-            android:text="Top Things To See During A Holiday In Hong Kong and Many other places."
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            />
-        <TextView
-            android:textSize="16dp"
-            android:paddingTop="7dp"
-            android:layout_marginStart="10dp"
-            android:text="@string/app_w"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="#000000"
-            />
+            android:orientation="vertical"
+            android:layout_margin="16dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f9f9f9"
+                android:weightSum="4">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:textColor="#000000"
+                    android:letterSpacing="0.01"
+                    android:lineSpacingExtra="5sp"
+                    tools:text="Trip to San fran"
+                    android:drawableStart="@drawable/ic_oval_6"
+                    android:drawablePadding="16dp"
+                    android:drawableTint="@color/purple"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="#4a4a4a"
+                    android:letterSpacing="0.01"
+                    android:lineSpacingExtra="4sp"
+                    tools:text="18/06/12"
+                    android:gravity="end"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:textColor="#4d5468"
+                android:letterSpacing="0.01"
+                android:layout_marginTop="8dp"
+                android:lineSpacingExtra="4sp"
+                tools:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/note2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/note1"
+        android:backgroundTint="#f9f9f9">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="16dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f9f9f9"
+                android:weightSum="4">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:textColor="#000000"
+                    android:letterSpacing="0.01"
+                    android:lineSpacingExtra="5sp"
+                    tools:text="Shopping list"
+                    android:drawableStart="@drawable/ic_oval_5"
+                    android:drawablePadding="16dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="#4a4a4a"
+                    android:letterSpacing="0.01"
+                    android:lineSpacingExtra="4sp"
+                    tools:text="18/06/12"
+                    android:gravity="end"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:textColor="#4d5468"
+                android:letterSpacing="0.01"
+                android:layout_marginTop="8dp"
+                android:lineSpacingExtra="4sp"
+                tools:text="So far, this is what we need for our trip:" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/note3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/note2"
+        android:backgroundTint="#f9f9f9">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="16dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f9f9f9"
+                android:weightSum="4">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:textColor="#000000"
+                    android:letterSpacing="0.01"
+                    android:lineSpacingExtra="5sp"
+                    tools:text="Trip to San fran"
+                    android:drawableStart="@drawable/ic_oval_6"
+                    android:drawablePadding="16dp"
+                    android:drawableTint="@color/purple"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="#4a4a4a"
+                    android:letterSpacing="0.01"
+                    android:lineSpacingExtra="4sp"
+                    tools:text="18/06/12"
+                    android:gravity="end"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:textColor="#4d5468"
+                android:letterSpacing="0.01"
+                android:layout_marginTop="8dp"
+                android:lineSpacingExtra="4sp"
+                tools:text="San fran was one of the coolest places i have ever been all the beautiful sightseeing and …" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/note4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/note3"
+        android:backgroundTint="#f9f9f9">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="16dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f9f9f9"
+                android:weightSum="4">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="3"
+                    android:layout_height="wrap_content"
+                    android:textSize="17sp"
+                    android:textColor="#000000"
+                    android:letterSpacing="0.01"
+                    android:lineSpacingExtra="5sp"
+                    tools:text="Shopping list"
+                    android:drawableStart="@drawable/ic_oval_5"
+                    android:drawablePadding="16dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:textColor="#4a4a4a"
+                    android:letterSpacing="0.01"
+                    android:lineSpacingExtra="4sp"
+                    tools:text="18/06/12"
+                    android:gravity="end"/>
+
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="13sp"
+                android:textColor="#4d5468"
+                android:letterSpacing="0.01"
+                android:layout_marginTop="8dp"
+                android:lineSpacingExtra="4sp"
+                tools:text="So far, this is what we need for our trip:" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 
 
-    </LinearLayout>
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@drawable/fab"
+        android:tint="@android:color/white"
+        app:backgroundTint="#3D0F54"
+        android:layout_gravity="end"
+        app:srcCompat="@android:drawable/ic_input_add" />
 </LinearLayout>
