--- a/app/src/main/res/layout/empty_note.xml
+++ b/app/src/main/res/layout/empty_note.xml
@@ -5,37 +5,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:id="@+id/header1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:weightSum="2">
+
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/header1"
+            android:layout_margin="16dp"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:scaleType="fitStart"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/navbox" />
-
-        <TextView
-            android:id="@+id/edit"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:textSize="17sp"
-            android:textColor="#7b1e58"
-            android:layout_gravity="end|center"
-            android:gravity="end"
-            tools:text="Done"
-            />
-    </LinearLayout>
+            app:srcCompat="@drawable/navbox"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/notes"
