--- a/app/src/main/res/layout/notebook_tutorial_2.xml
+++ b/app/src/main/res/layout/notebook_tutorial_2.xml
@@ -20,7 +20,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_tutorial"
+            app:srcCompat="@drawable/ic_tutorial"
             android:scaleType="center"/>
         <ImageView
             android:layout_width="match_parent"
@@ -46,9 +46,9 @@
             android:textColor="#4a4a4a"
             android:lineSpacingExtra="8sp"
             android:gravity="center_horizontal"
-            tools:text="Add Notes to Notebook"
+            android:text="Add Notes to Notebook"
             android:layout_gravity="center"
-            android:padding="32dp"
+            android:padding="16dp"
             />
 
 
@@ -59,11 +59,11 @@
             android:textColor="#9b9faa"
             android:lineSpacingExtra="8sp"
             android:gravity="center_horizontal"
-            tools:text="Simply create your note and add it to your favorite notebook"
+            android:text="Simply create your note and add it to your favorite notebook"
             android:layout_gravity="center"
-            android:paddingStart="68dp"
-            android:paddingEnd="68dp"
-            android:paddingBottom="86dp"
+            android:paddingStart="44dp"
+            android:paddingEnd="44dp"
+            android:paddingBottom="32dp"
             />
 
         <LinearLayout
@@ -76,13 +76,14 @@
             android:weightSum="3">
 
             <TextView
+                android:id="@+id/skip"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:textSize="16sp"
                 android:textColor="#9b9b9b"
                 android:lineSpacingExtra="5sp"
-                tools:text="Skip"
+                android:text="Skip"
                 android:padding="8dp"/>
 
             <ImageView
@@ -90,9 +91,10 @@
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center"
-                android:src="@drawable/ic_oval7"/>
+                app:srcCompat="@drawable/ic_oval7"/>
 
             <TextView
+                android:id="@+id/next"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
@@ -100,7 +102,7 @@
                 android:textColor="#ffffff"
                 android:lineSpacingExtra="5sp"
                 android:gravity="center_horizontal"
-                tools:text="Next"
+                android:text="Next"
                 android:background="@drawable/ic_create_account"
                 android:padding="16dp"
                 />
